<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.3</version>
    </parent>
    <groupId>de.dfutil</groupId>
    <artifactId>datafactoryutilities-aggregator-parent</artifactId>
    <version>0.1-SNAPSHOT</version>
    <packaging>pom</packaging>
    <properties>
        <java.version>24</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <modules>
        <module>datafactoryutilities-adressinformationprovider</module>
        <module>datafactoryutilities-commons</module>
        <module>datafactoryutilities-downloader</module>
        <module>datafactoryutilities-importer</module>
    </modules>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <compilerArgument>-proc:full</compilerArgument>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>